
18. New. raise statements can have a when clause, like an exit statement.

19. Fix: statements starting with paths like /bin/bash and bin/bash are now recognized as shell commands.

20. Fix: broken pipes (such as env | head) no longer show meaningless error messages.

21. Refactor: parser.adb broken up into interpreter.adb and parser child packages.

22. Change: better error message for dollar expansions with missing variable names.

23. New: pragma annotate extended with icon and screenshot fields.

24. Fix: pragma annotate HTML output is html-encoded.

25. Fix: executable statements in blocks no longer allowed type and variable declarations. [verify negative tests]

26. Change: the first word in a statement can be a Bourne shell command with path characters and certain punctuation symbols allowed in the names (e.g. minus).

27. Refactor: to improve performance, type checking suppressed at run-time unless necessary, 11% faster for monty.sp example.

28. Fix: backquotes in a shell word no longer have 2 extra characters after substitution.

29. Fix: unstructured scripts no longer pull/discard top-level declarations early nested block exit.

30. Fix: fixed memory leak with directory_operations.open declaring new resources each time.

31. Change: affirm blocks run in restricted mode as a precaution against side-effects.

32. Change: (Mehdi) Strings package now has more univeral parameters and return results to reduce type casting and to follow a similar design to the numerics package.

33. New: SparForte core regression tests passing on Cygwin build.

34. Change: Unstructured scripts no longer require variables to be declared
before use.  This is to make unstructure scripts more convenient for simple
tasks, and to give them different behaviour to structured scripts.

35. Fix: raising an undeclared exception now shows an identifier not declared
error, not a identifier of the wrong class error.
